for loops and map statements

--- a/list_columns.Rmd
+++ b/list_columns.Rmd
@@ -67,6 +67,58 @@ df[[2]]
 
 
 ```{r}
-#mean_and_sd(df[[1]])
+mean_and_sd = function(x) {
+  
+  if (!is.numeric(x)) {
+    stop("Argument x should be numeric")
+  } else if (length(x) == 1) {
+    stop("Cannot be computed for length 1 vectors")
+  }
+  
+  mean_x = mean(x)
+  sd_x = sd(x)
+
+  tibble(
+    mean = mean_x, 
+    sd = sd_x
+  )
+}
+
+```
+
+```{r}
+mean_and_sd(df[[1]])
+mean_and_sd(df[[2]])
+mean_and_sd(df[[3]])
+mean_and_sd(df[[4]])
+```
+
+
+```{r}
+output = vector("list", length = 4)
+
+```
+
+Writing first for loop
+```{r}
+for (i in 1:4) {
+  
+  output[[i]] = mean_and_sd(df[[i]])
+}
+
+output
+```
+
+map statement
+
+```{r}
+output = map(df, mean_and_sd)
+
+output_median = map(df, median)
+output_median = map_dbl(df, median)
+
+output_summary = map(df, summary)
+
+output = map_dfr(df, mean_and_sd)
 ```
 
